--- a/public/chat.html
+++ b/public/chat.html
@@ -3,12 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css"  href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="./images/white-favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Montserrat:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">    
     <title>Chat | MONKEY</title>
 </head>
-<body>
-    <textarea id="userInput" placeholder="Digite sua mensagem..."></textarea>
-    <button onclick="sendMessage()">Enviar</button>
-    <div id="chatLog"></div>
+<body style="overflow:hidden;">
+    <header class="position-fixed">
+        <nav class="header navbar-wrapper">
+            <a class="title" href="./index.html">Monkey</a>
+            <a class="text-nav" href="./index.html#team-section">Sobre Nós</a></li>
+            <a class="text-nav" href="./chat.html">Converse com Luna</a>
+            <img src="./images/monkey-logo-brown.png" class="logo" title="MONKEY"/>
+        </nav>
+    </header>
+    <main>
+        <section class="container chat flex-column full-width">
+            <div id="chatLog" class="m-1"></div>
+            <div class="chat full-width m-1">
+                <textarea id="userInput" class="half-width chat-input m-1" placeholder="Digite sua mensagem..."></textarea>
+                <button class="btn-zero" onclick="sendMessage()">Enviar</button>
+            </div>
+        </section>
+
+        <img width="300" height="500" style="position: absolute; top: 0; right: -2.5em" src="./images/macaco.png">
+    </main>
 </body>
 <script type="text/javascript" src="./js/script.js"></script>
 </html>
