--- a/public/chat.html
+++ b/public/chat.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">    
     <title>Chat | MONKEY</title>
 </head>
-<body style="overflow:hidden;">
+<body style="overflow-x: hidden;">
     <header class="position-fixed">
         <nav class="header navbar-wrapper">
             <a class="title" href="./index.html">Monkey</a>
@@ -21,15 +21,15 @@
         </nav>
     </header>
     <main>
-        <section class="container chat flex-column full-width">
-            <div id="chatLog" class="m-1"></div>
-            <div class="chat full-width m-1">
+        <section class="container chat-section flex-column">
+            <div id="chatLog" class="chat-log"></div>
+            <div class="chat m-1">
                 <textarea id="userInput" class="half-width chat-input m-1" placeholder="Digite sua mensagem..."></textarea>
                 <button class="btn-zero" onclick="sendMessage()">Enviar</button>
             </div>
         </section>
 
-        <img width="300" height="500" style="position: absolute; top: 0; right: -2.5em" src="./images/macaco.png">
+        <img width="300" height="500" style="position: absolute; top: 0; left: -2.5em" src="./images/macaco.png">
     </main>
 </body>
 <script type="text/javascript" src="./js/script.js"></script>
