--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     <main>
         <section id="showcase-section" class="home">
             <div class="container justify-around">
+                <img class="leaf-home" src="./images/folhas/palm2.png">
                 <div>  
                     <img width="700" height="700" src="./images/macaco-about.png">
                 </div>
@@ -32,9 +33,7 @@
                     <p>
                         Explore dicas e soluções para otimizar o consumo de energia ao interagir com o nosso <i>chatbot</i>. Conheça a Luna, nossa simpática mascote, e descubra maneiras práticas de tornar seu estilo de vida mais sustentável. Juntos, podemos fazer a diferença!
                     </p>
-                    <a href="./chat.html" class="full-width">
-                        <button class="btn-zero my-3"></a>Conheça nosso <i>chatbot</i></button>
-                    </a>
+                    <button onclick="location.href='./chat.html'" class="btn-zero my-3"></a>Conheça nosso <i>chatbot</i></button>
                 </div>
             </div>
         </section>
@@ -85,6 +84,12 @@
                             <p class="insta">indisponivel</p>
                         </div>
                     </div>
+                    <img class="leaf leaf-animation" src="./images/folhas/palm.png">
+                    <img class="leaf-1" src="./images/folhas/palm2.png">
+                    <img class="leaf-2" src="./images/folhas/palm3.webp">
+                    <img class="leaf-3" src="./images/folhas/prantaseca.png">
+
+                    <img class="leaf-home-1" src="./images/folhas/adao2.png">
                 </div>
                 </div>
             </div>
