changes in chat layout

--- a/public/chat.html
+++ b/public/chat.html
@@ -31,7 +31,7 @@
                     <span class="loader"></span>
                     <div class="chat">
                         <textarea id="userInput" class="half-width chat-input mr-1" placeholder="Digite sua mensagem..."></textarea>
-                        <button class="btn-zero" onclick="sendMessage()">Enviar</button>
+                        <button id="sendButton" class="btn-zero" onclick="sendMessage()">Enviar</button>
                     </div>
                 </div>
             </div>
