--- a/public/chat.html
+++ b/public/chat.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">    
     <title>Chat | MONKEY</title>
 </head>
-<body style="overflow-x: hidden;">
+<body class="background-img" style="overflow-x: hidden;">
     <header class="position-fixed">
         <nav class="header navbar-wrapper">
             <a class="title" href="./index.html">Monkey</a>
@@ -37,7 +37,7 @@
             </div>
         </section>
 
-        <img width="300" height="500" class="luna swing-animation" src="./images/macaco.png">
+        <img width="250" height="400" class="luna swing-animation" src="./images/macaco.png">
     </main>
 </body>
 <script type="text/javascript" src="./js/script.js"></script>
